# Fork_CRISP

./: .gitignore  ReadMe.md
files/additional baselines/pushT/: pushT_gurobi.jl
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/common/: BasicTypes.h  MatlabHelper.h  ParametersManager.h  ValueFunction.h
src/core/include/cppad_core/: CppAdInterface.h
src/core/include/problem_core/: ConstraintFunction.h  ObjectiveFunction.h  OptimizationProblem.h
src/core/include/solver_core/: SolverInterface.h  SolverParameters.h
src/core/python/: pybindSolver.cpp
src/core/src/cppad_core/: CppAdInterface.cpp
src/core/tests/: test_cppad_interface.cpp  test_optimizationProblem.cpp  test_solver.cpp
src/examples/: CMakeLists.txt
src/examples/2dHopper/cpp/: Solve2DHopper.cpp
src/examples/cartTransp/cpp/: SolveCartTransp.cpp
src/examples/pushT/: SolvePushT.cpp
src/examples/pushbot/cpp/: SolvePushbot.cpp
src/examples/pushbot/python/: SolvePushbot.py
src/examples/pushbox/: SolvePushbox.cpp  SolvePushboxSDF.cpp  VisualizePushBox.py
src/examples/pushbox/results/: results_pushbox.csv  results_pushbox_sdf_AD.csv
src/examples/pushcircle/: SolvePushcircleSDF.cpp  VisualizePushCircle.py
src/examples/pushcircle/results/: results_pushcircle_sdf_FD.csv
src/examples/server/cpp/: SolveServer.cpp
